--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>Excursions</title>
   </head>
   <body>
-   <h1>Discover hidden places in the world around you</h1>
-   <p class="link">Download Excursion (Coming soon!)</p>
+
+    <!--title-->
+    <div>
+      <h1>Discover hidden places in the world around you</h1>
+      <p class="link">Download Excursion (Coming soon!)</p>
+    </div>
+
+    <!--video image-->
+    <div>
+      <p><video src="resources/videos/excursion.mp4">Video not supported</video></p>
+    </div>
+
+    <!--travel guide-->
+    <div>
+      <h2>Your personal travel guide</h2>
+      <p class="gray">Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <p><img src="resources/images/camp.jpg"></p>
+    </div>
   </body>
 </html>
