--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!--video image-->
     <div>
-      <p><video src="resources/videos/excursion.mp4">Video not supported</video></p>
+      <video autoplay muted loop><source src="resources/videos/excursion.mp4" type="video/mp4"></video>
     </div>
 
     <!--travel guide-->
@@ -23,6 +23,18 @@
       <h2>Your personal travel guide</h2>
       <p class="gray">Excursion remembers places you like, and recommends new points of interest around you.</p>
       <p><img src="resources/images/camp.jpg"></p>
+    </div>
+
+    <!--travel guide-->
+    <div>
+      <img src="resources/images/phone.png">
+      <h2>Coming Soon for iPhone and Android</h2>
+      <p class="link">Download Excursion (Coming soon!)</p>
+    </div>
+
+    <!--copyright-->
+    <div>
+      <p id="copyright">© Excursion</p>
     </div>
   </body>
 </html>
